# kg-4semester

./: .gitignore
Projects/task1/: main.cpp
Projects/task1_Potapkina/: CMakeLists.txt  a.out  control.cpp
Projects/task2/: main.cpp  run.sh
Projects/task2_Potapkina/: a.out
Projects/task3/: frog.txt  hare.txt  main.cpp  matrix.h
Projects/task4/: clip.h  frog_circle.txt  geometric.txt  help.txt  label.h  main.cpp  matrix.h  textbox.h
